--- a/apps/polls/static/polls/style.css
+++ b/apps/polls/static/polls/style.css
@@ -1,7 +1,10 @@
 li a {
     color: green;
+    text-decoration: none;
+    list-style-type: decimal;
 }
 
 body {
     background: white url("images/background.gif") no-repeat;
+    background-color: rgb(200, 200, 200);
 }
